# argon2-gpu

./: .gitignore  CMakeLists.txt  README.md
data/kernels/: argon2_kernel.cl
include/argon2-opencl/: argon2params.h  processingunit.h  programcontext.h
lib/argon2-opencl/: argon2params.cpp  kernelloader.h  processingunit.cpp
qmake/: argon2-gpu.pro
qmake/argon2-opencl/: argon2-opencl.pro
qmake/argon2-opencl-bench/: argon2-opencl-bench.pro
qmake/argon2-opencl-test/: argon2-opencl-test.pro
qmake/commandline/: commandline.pro
scripts/: run-benchmark.sh
scripts/metacentrum/: start-benchmark.sh
src/argon2-opencl-bench/: benchmark.cpp  benchmark.h  main.cpp
src/argon2-opencl-test/: main.cpp
